@@ -7,6 +7,7 @@ pov-check-health (0.13.0) UNRELEASED; urgency=medium
     - fix checknfs to actually check the local mountpoint, not the remote
       export name.
   * New checks:
+    - check_no_matching_lines (GH #5),
     - checkcert_smtp_starttls (GH #10).
   * Fix shellcheck warnings in all the scripts.
 
